--- a/platformio.ini
+++ b/platformio.ini
@@ -11,4 +11,7 @@
 [env:esp32doit-devkit-v1]
 platform = espressif32
 board = esp32doit-devkit-v1
-framework = espidf
+framework = arduino
+monitor_speed = 115200
+build_flags = -DCONFIG_SPIRAM_CACHE_WORKAROUND
+
