--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,4 @@
 [env:esp32doit-devkit-v1]
 platform = espressif32
 board = esp32doit-devkit-v1
-framework = arduino
-monitor_speed = 115200
-build_flags = -DCONFIG_SPIRAM_CACHE_WORKAROUND
-
+framework = espidf
