--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,5 @@ platform = espressif32
 board = esp32dev
 framework = espidf
 upload_protocol = esptool
+build_flags =
+            -D LOG_LOCAL_LEVEL=ESP_LOG_DEBUG
