converted project to library

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ build
 # willen we sdkconfig pushen?
 sdkconfig*
 
+# Example
+example/build
+example/cmake-build*
+example/sdkconfig
+
 # IDE specific
 # VScode
 .vscode
