--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,8 @@
-[submodule "libs/I2Cbus"]
-	path = libs/I2Cbus
+[submodule "example/libs/I2Cbus"]
+	path = example/libs/I2Cbus
 	url = https://github.com/natanaeljr/esp32-I2Cbus.git
 	ignore = dirty
-[submodule "libs/MPUdriver"]
-	path = libs/MPUdriver
+[submodule "example/libs/MPUdriver"]
+	path = example/libs/MPUdriver
 	url = https://github.com/natanaeljr/esp32-MPU-driver.git
 	ignore = dirty
-
-[submodule "libs/MiniPID"]
-	path = libs/MiniPID
-	url = https://github.com/tekdemo/MiniPID.git
