--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 set(COMPONENT_SRCS
         "src/blinky.cpp"
-        "src/Com.cpp"
+        "src/comm.cpp"
         "src/control.cpp"
-        "src/drivers/com/UART.cpp"
+        "src/drivers/comm/UART.cpp"
         "src/drivers/control/L293D.cpp"
         )
 set(COMPONENT_ADD_INCLUDEDIRS
