made L293D driver modular, refactor to pwm driver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ set(COMPONENT_SRCS
         "src/comm.cpp"
         "src/control.cpp"
         "src/drivers/comm/UART.cpp"
-        "src/drivers/control/L293D.cpp"
+        "src/drivers/control/Pwm.cpp"
         )
 set(COMPONENT_ADD_INCLUDEDIRS
         "include"
