--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(COMPONENT_SRCS
         "src/control.cpp"
         "src/drivers/comm/UART.cpp"
         "src/drivers/control/Pwm.cpp"
+        "src/drivers/control/DriverSet.cpp"
         )
 set(COMPONENT_ADD_INCLUDEDIRS
         "include"
