--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,6 @@
+# TODO this if else is really ugly, is there no better way?
+if (DEFINED IDFTOOL)
+#    included as lib in ESP-IDF
 set(COMPONENT_SRCS
         "src/blinky/blinky.cpp"
         "src/log/log.cpp"
@@ -15,3 +18,17 @@ set(COMPONENT_ADD_INCLUDEDIRS
 set(COMPONENT_REQUIRES "MPUdriver")
 
 register_component()
+else()
+#    standalone unit test
+    cmake_minimum_required(VERSION 3.15)
+    project(Aruna)
+    file(GLOB_RECURSE ARUNA_TEST_SOURCES
+            "test/*.*"
+            )
+
+    add_executable(aruna-test ${ARUNA_TEST_SOURCES})
+    set(aruna_DIR .)
+    find_package(aruna)
+    add_dependencies(aruna-test aruna)
+    target_link_libraries(aruna-test aruna)
+endif()
