--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,8 @@ set(COMPONENT_SRCS
         "src/sis/watcher.cpp"
         "src/sis/Water.cpp"
         "src/sis/portable/esp32/WaterSensor.cpp"
+        "src/driver/ADS101x/ADS101x.cpp"
+        "src/driver/ADS101x/portable/ESP32/ADS101x_ESP32.cpp"
         )
 set(COMPONENT_ADD_INCLUDEDIRS
         "include"
