--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ set(COMPONENT_SRCS
         "src/driver/ADS101x/ADS101x.cpp"
         "src/driver/ADS101x/portable/ESP32/ADS101x_ESP32.cpp"
         "src/sis/ADS101xWaterSensor.cpp"
+        "src/driver/PCA9685/portable/ESP32/PCA9685_ESP32.cpp"
+        "src/control/PCA9685.cpp"
         )
 set(COMPONENT_ADD_INCLUDEDIRS
         "include"
