I²C abstraction driver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,8 @@ set(COMPONENT_SRCS
         "src/sis/ADS101xWaterSensor.cpp"
         "src/driver/PCA9685/portable/ESP32/PCA9685_ESP32.cpp"
         "src/control/PCA9685.cpp"
+        "src/driver/I2C_master.cpp"
+        "src/driver/port/ESP32/ESP32_I2C_master.cpp"
         )
 set(COMPONENT_ADD_INCLUDEDIRS
         "include"
