--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,7 @@ set(COMPONENT_SRCS
         "src/sis/watcher.cpp"
         "src/sis/Water.cpp"
         "src/sis/portable/esp32/WaterSensor.cpp"
-        "src/driver/ADS101x/ADS101x.cpp"
-        "src/driver/ADS101x/portable/ESP32/ADS101x_ESP32.cpp"
+        "src/driver/ADS101x.cpp"
         "src/sis/ADS101xWaterSensor.cpp"
         "src/driver/I2C_master.cpp"
         "src/driver/port/ESP32/ESP32_I2C_master.cpp"
